namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-security
  labels:
    pod-security.kubernetes.io/enforce: restricted
