deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-security-demo
  namespace: cloud-security
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-security-demo
  template:
    metadata:
      labels:
        app: cloud-security-demo
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app
          image: REPLACE_WITH_ECR_IMAGE
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
