service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-security-demo
  namespace: cloud-security
spec:
  selector:
    app: cloud-security-demo
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
